--- a/css/photos.css
+++ b/css/photos.css
@@ -157,6 +157,7 @@ body, html {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: -25px;
   }
   
 .photo-gallery {
